hello-application-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-application-service
  labels:
    run: hello-application-sevice
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    run: load-balancer-example
