hello-application-ingress-0701.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jrs-pasperserver-pro 
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: jrs-jasperserver-pro 
            port:
              number: 80
        path: /
        pathType: Prefix
